// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders without crashing even with no text or emoji data 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <img
      className="card__pic"
      src="https://farm5.staticflickr.com/4810/44529846610_bc64036550_b.jpg"
    />
    <p
      className="card__content-text"
    />
    <p
      className="card__content-emoji"
    />
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;

exports[`Card that it matches an existing snapshot 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <img
      className="card__pic"
      src="https://farm5.staticflickr.com/4810/44529846610_bc64036550_b.jpg"
    />
    <p
      className="card__content-text"
    >
      this is test text string
    </p>
    <p
      className="card__content-emoji"
    >
      test emoji
    </p>
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;
